# pd_app

./: .gitignore  Cargo.toml  README.md  TODO.md
pd_gui/: Cargo.toml
pd_gui/src/: app.rs  artist.rs  audio.rs  composition.rs  main.rs  synth.rs
pd_gui/src/ui/: colors.rs  mod.rs
pd_gui/src/ui/components/: mod.rs
pd_gui/src/ui/components/audio_mixer/: channel_fader.rs  level_meter.rs  mod.rs  test_canvas.rs
pd_gui/src/ui/components/panes/: mod.rs
pd_gui/src/ui/components/sample_creator/: mod.rs
test_backend_with_mocks/: app.js  artist.json  package.json
