
[package]
name = "pd-app"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epaint = "0.19.0"
iced = {version = "0.4", features = ["pure"]}
iced_native = "0.5.1"

# Dependencies for targeting web based sources 
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# TODO: Create a separate audio_engine that handles audio streams and synthesis (as well as a midi_engine)
cpal = "0.14.0"
fundsp = "0.9.0"